@@ -1,7 +1,5 @@
 AUX 77zattoo-bin 25 RMD160 940b68358d432d9fb5d83fd8399995fc52ca4704 SHA1 525b50026d12cea6d5b2ff9bdef2eaf48bab9272 SHA256 2e8b23ce747efe86e2121ae1a548c18a971f6564de91ebbcf5841434a44e7212
-DIST zattoo-2.2.10.6523-i386.tgz 5378982 RMD160 78290e0f3e28382f1db57881a42fb36eeb95b613 SHA1 bed22f6b9fbe16762a965ce1ae4c1f0fc8fd05bd SHA256 e9526c30434c6cbe50a35d2c6943df5e361271e5cfcf416aee0544e84f4d761f
 DIST zattoo-3.0.5.8208-i386.tgz 5498621 RMD160 27d702779eac0c0bdc5a3b50da054b3835ddd937 SHA1 47d8c4f8221b2f00b0d2605f87a62794059f870d SHA256 37140101b6ea37bcec9e6dd829f417945e47f4b9e1797622a28451c497151ec8
-EBUILD zattoo-bin-2.2.10.6523.ebuild 1722 RMD160 68f8df00809bc2cd1f02cdb9f29b90d4a6273052 SHA1 28c351883e60e7a6814defd8c019df4cc7bf0d1b SHA256 22e67ced992511dbb69e6b6aebe03d75037be31133eafbcc008d4ef2baeac707
 EBUILD zattoo-bin-3.0.5.8208.ebuild 1722 RMD160 68f8df00809bc2cd1f02cdb9f29b90d4a6273052 SHA1 28c351883e60e7a6814defd8c019df4cc7bf0d1b SHA256 22e67ced992511dbb69e6b6aebe03d75037be31133eafbcc008d4ef2baeac707
-MISC ChangeLog 1330 RMD160 d2cb63c87c7dab741843bed0dcc255cce9f66c82 SHA1 61e541e0ad3498f424bf80d2b06ff38fd4b48166 SHA256 e9f2cc29d690bf2854ddc84c4abefcd2d8737ccadc6c6e4b3f4256fda9c72d75
+MISC ChangeLog 1425 RMD160 fcaaa20b3d0b47f98e8d73b2fa48012abfa5a3aa SHA1 810cf9054c5d6edc92d5b19ff4cb6119b413b87c SHA256 1dcf94208d0482728093cb1929d35130a18f87d280e82a4a32b721ba99eaa823
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
